# polars_uuid4

./: Cargo.toml  README.md  demo.ipynb  pyproject.toml
polars_uuid4/: __init__.py
src/: expressions.rs
